<resources>
    <string name="app_name">ParcTr</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_home">Home</string>
    <string name="track_list">Track List</string>
    <string name="qr_code">QR Code</string>
    <string name="parcel_type">Type of parcel</string>
    <string name="sender">Sender</string>
    <string name="receiver">Receiver</string>
    <string name="date_send">Date Sent</string>
    <string name="pick_up_date">Pick up date</string>
    <string name="pick_up_destination">Pick up destination</string>
    <string name="status_btn">Status(Paid)</string>
    <string name="from">Date Send</string>
    <string name="date">Oct 22, SUN</string>
    <string name="time_send">08:00am</string>
    <string name="pick_up">Pick up</string>
    <string name="pick_up_time">05:00pm</string>
    <string name="laptop_hp_pavillion">Laptop: Hp Pavillion</string>
    <string name="_11112888757">11112888757</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_tracking_item">New Tracking Item</string>
    <string name="id">ID</string>
    <string name="select">Select</string>
    <string name="type_of_parcel">Type of Parcel</string>
    <string name="save">SAVE</string>
    <string name="_07XXXXXXXX">07XXXXXXXX</string>
    <string name="status">Status</string>
    <string name="picked_up">Delivered</string>
    <string name="package_edit_dialog_parcel_payment_status">Payment Status</string>
    <string name="package_edit_dialog_parcel_paid">Parcel paid</string>
    <string name="phone_number">Receiver\'s Phone Number</string>
    <string name="scan_code">Scan code</string>
    <string name="main_menu_scanned_text">Scanned:</string>
    <string name="package_edit_dialog_parcel_picked_up">Parcel picked up</string>
    <string name="package_edit_dialog_parcel_pickup_status">Pick up status</string>
    <string name="id_number">Receiver\'s ID No.</string>
    <string name="id_number_ex">123456789</string>
    <string name="welcome_to_parctr">Welcome to ParcTr,</string>
    <string name="tracking">Tracking</string>
    <string name="update_parcel">Update Parcel Status</string>
    <string name="archive">Archive</string>
    <string name="log_out">Log Out</string>
    <string name="add_parcel">Add Parcel</string>
    <string name="prompt_email_hint">parctr@co.ke</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="driver">Driver</string>
    <string name="client">Client</string>
</resources>