<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_tracklist"
        android:icon="@drawable/ic_baseline_view_list_24"
        android:title="@string/track_list" />

    <item
        android:id="@+id/add_parcel"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        android:title="@string/add_parcel" />

    <item
        android:id="@+id/archive"
        android:icon="@drawable/ic_baseline_archive_24"
        android:title="@string/archive" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:title="logout"/>
</menu>