<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lyt_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible"
        app:cardBackgroundColor="#F4F3F3"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            >

            <TextView
                android:id="@+id/parcel_id"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:textAllCaps="true"
                android:text="@string/_11112888757"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/bar_code"
                android:layout_width="275dp"
                android:layout_height="116dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/qr_code"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/parcel_id" />

            <TextView
                android:id="@+id/type_parcel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/parcel_type"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bar_code" />

            <TextView
                android:id="@+id/type_parcel_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/laptop_hp_pavillion"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/type_parcel"
                app:layout_constraintTop_toBottomOf="@+id/type_parcel" />

            <TextView
                android:id="@+id/sender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/sender"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/type_parcel_value" />

            <TextView
                android:id="@+id/sender_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:text="Elijah Wanyama"
                app:layout_constraintStart_toStartOf="@+id/sender"
                app:layout_constraintTop_toBottomOf="@+id/sender" />

            <TextView
                android:id="@+id/receiver"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/receiver"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sender_value" />

            <TextView
                android:id="@+id/receiver_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:text="Paul Brian"
                app:layout_constraintStart_toStartOf="@+id/receiver"
                app:layout_constraintTop_toBottomOf="@+id/receiver" />

            <TextView
                android:id="@+id/date_text"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/from"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/receiver_value" />

            <TextView
                android:id="@+id/date_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/date_text"
                app:layout_constraintTop_toBottomOf="@+id/date_text" />
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />


            <TextView
                android:id="@+id/time_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_send"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/date_send"
                app:layout_constraintTop_toBottomOf="@+id/date_send" />

            <View
                android:id="@+id/divider4"
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#888888"
                app:layout_constraintBottom_toBottomOf="@+id/pick_up_date"
                app:layout_constraintEnd_toStartOf="@+id/pick_up_date"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/date_send"
                app:layout_constraintTop_toTopOf="@+id/pick_up_date" />

            <TextView
                android:id="@+id/pick_up_text"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/pick_up"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/receiver_value" />

            <TextView
                android:id="@+id/pick_up_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/pick_up_text"
                app:layout_constraintTop_toBottomOf="@+id/pick_up_text" />

            <TextView
                android:id="@+id/pick_up_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_up_time"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/pick_up_date"
                app:layout_constraintTop_toBottomOf="@+id/pick_up_date" />



            <TextView
                android:id="@+id/pick_up_destination"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/pick_up_destination"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time_send" />

            <TextView
                android:id="@+id/pick_up_destination_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kitale"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/pick_up_destination"
                app:layout_constraintTop_toBottomOf="@+id/pick_up_destination" />


            <Button
                android:id="@+id/btn_change_status"
                android:layout_width="349dp"
                android:layout_height="49dp"
                android:layout_margin="8dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_curve"
                android:fontFamily="@font/aldrich"
                android:text="@string/status_btn"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pick_up_destination_value" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>