<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_large"
    tools:context=".ui.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_mlarge"
        android:text="@string/welcome_to_parctr"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/color_black"
        android:textStyle="bold" />
    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_xxxlarge" />

    <Button
        android:id="@+id/add_parcel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-4dp"
        android:layout_marginRight="-4dp"
        android:paddingVertical="@dimen/spacing_medium"
        android:paddingHorizontal="@dimen/spacing_xslarge"
        android:layout_gravity="center"
        app:backgroundTint="@null"
        android:background="@drawable/button_curve"
        android:text="@string/add_parcel"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textStyle="bold" />


    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_xxxlarge" />

    <Button
        android:id="@+id/tracking_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-4dp"
        android:layout_marginRight="-4dp"
        android:paddingVertical="@dimen/spacing_medium"
        android:paddingHorizontal="86dp"
        android:layout_gravity="center"
        app:backgroundTint="@null"
        android:background="@drawable/button_curve"
        android:text="@string/tracking"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_xxxlarge" />

    <Button
        android:id="@+id/update_parcel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-4dp"
        android:layout_marginRight="-4dp"
        android:paddingVertical="@dimen/spacing_medium"
        android:paddingHorizontal="@dimen/spacing_xmlarge"
        android:layout_gravity="center"
        app:backgroundTint="@null"
        android:background="@drawable/button_curve"
        android:text="@string/update_parcel"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_xxxlarge" />

    <Button
        android:id="@+id/archive_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-4dp"
        android:layout_marginRight="-4dp"
        android:paddingVertical="@dimen/spacing_medium"
        android:paddingHorizontal="90dp"
        android:layout_gravity="center"
        app:backgroundTint="@null"
        android:background="@drawable/button_curve"
        android:text="@string/archive"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_xxxlarge" />

    <Button
        android:id="@+id/log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-4dp"
        android:layout_marginRight="-4dp"
        android:paddingVertical="@dimen/spacing_medium"
        android:paddingHorizontal="@dimen/spacing_xxlarge"
        android:layout_gravity="center"
        app:backgroundTint="@null"
        android:background="@drawable/button_curve"
        android:text="@string/log_out"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</LinearLayout>