<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        tools:context=".ui.registration.RegisterActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="330dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large">

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_middle" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />

                <Button
                    android:id="@+id/scan_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:drawablePadding="5dp"
                    android:paddingHorizontal="24dp"
                    android:paddingVertical="16dp"
                    android:text="@string/scan_code"
                    android:textColor="@color/color_white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/type_parcel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.786"
                    app:layout_constraintStart_toEndOf="@+id/type_parcel"
                    app:layout_constraintTop_toTopOf="@+id/type_parcel"
                    app:layout_constraintVertical_bias="0.0" />


                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/id"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/parcel_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aldrich"
                    android:hint="@string/id"
                    android:inputType="number"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/color_black"
                    android:textSize="22sp"
                    android:textStyle="normal" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/date_send"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/date_send"
                        android:layout_width="90dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/aldrich"
                        android:hint="@string/date_send"
                        android:textAlignment="textStart"
                        android:textColor="@color/text_black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text=""
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_change_checkIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="dateSend"
                        android:text="@string/select"
                        android:textAlignment="textEnd"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:ignore="OnClick" />
                </LinearLayout>


                <View
                    android:id="@+id/view"
                    android:layout_width="wrap_content"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/browser_actions_title_color" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/type_of_parcel"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/type_parcel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@null"
                    android:hint="@string/type_of_parcel"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/color_black"
                    android:textSize="22sp"
                    android:textStyle="normal" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/sender"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/sender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@null"
                    android:hint="@string/sender"
                    android:maxLength="50"
                    android:maxLines="1"

                    android:singleLine="true"
                    android:textColor="@color/color_black"
                    android:textSize="22sp"
                    android:textStyle="normal" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/receiver"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/receiver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@null"
                    android:hint="@string/receiver"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/color_black"
                    android:textSize="22sp"
                    android:textStyle="normal" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/phone_number"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/receiver_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@null"
                    android:hint="@string/_07XXXXXXXX"
                    android:inputType="phone"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/color_black"
                    android:textSize="22sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/id_number"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/receiver_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@null"
                    android:hint="@string/id_number_ex"
                    android:inputType="number"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/color_black"
                    android:textSize="22sp"
                    android:textStyle="normal" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/pick_up_destination"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/pick_up_destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@null"
                    android:hint="@string/pick_up_destination"
                    android:maxLength="50"
                    android:maxLines="1"

                    android:singleLine="true"
                    android:textColor="@color/color_black"
                    android:textSize="22sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/payment_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/package_edit_dialog_parcel_payment_status"
                    android:textSize="18sp" />

                <Switch
                    android:id="@+id/parcelPaidSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:nextFocusForward="@+id/productPageET"
                    android:singleLine="true"
                    android:text="@string/package_edit_dialog_parcel_paid"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"

                    tools:ignore="UseSwitchCompatOrMaterialXml" />


                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_medium" />

                <Button
                    android:id="@+id/save"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:background="@drawable/button_curve"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:backgroundTint="@null" />


            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>
</ScrollView>